k8s/keyrepo.yml
apiVersion: v1
kind: Service
metadata:
  name: key-repo
  labels:
    app: key-repo
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: key-repo
---
