k8s/msa.yml
apiVersion: v1
kind: Service
metadata:
  name: books
  labels:
    app: books
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: books
---
apiVersion: v1
kind: Route
metadata:
  name: books
  labels:
    app: books
  namespace: default
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: books
---
apiVersion: v1
kind: Service
metadata:
  name: stars
  labels:
    app: stars
  namespace: default
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: stars
---
